# FFTF

./: .autotools  .cproject  .gitignore  .project  Makefile.am  README.md  autogen.sh  common.ac  configure.ac  fftf.pc.in
docs/: Doxyfile.in  Makefile.am
inc/: Makefile.am
inc/fftf/: api.h
src/: Makefile.am  api.c  backend.c  backend.h  engine_appml.c  engine_appml.h  engine_cufft.c  engine_cufft.h  engine_fftw3.c  engine_fftw3.h  engine_ipp.c  engine_ipp.h  engine_kiss.c  engine_kiss.h  engine_libav.c  engine_libav.h  engine_mkl.c  engine_mkl.h  engine_ooura.c  engine_ooura.h  engine_viennacl.cc  engine_viennacl.h  safe_omp.h
src/cuda/: Makefile.am  cuda.c  cuda.h  cufft.c  cufft.h
src/kiss/: Makefile.am  kiss_fftnd.c  kiss_fftnd.h
src/ooura/: Makefile.am  fftsg.c  fftsg.h
src/opencl/: Makefile.am  clamdfft.c  clamdfft.h  opencl.c  opencl.h
src/opencl/viennacl/: forwards.h
src/opencl/viennacl/linalg/kernels/: fft_kernels.h  fft_source.h  matrix_col_kernels.h  matrix_col_source.h  matrix_prod_col_col_col_kernels.h  matrix_prod_col_col_col_source.h  matrix_prod_col_col_row_kernels.h  matrix_prod_col_col_row_source.h  matrix_prod_col_row_col_kernels.h  matrix_prod_col_row_col_source.h  matrix_prod_col_row_row_kernels.h  matrix_prod_col_row_row_source.h  matrix_prod_row_col_col_kernels.h  matrix_prod_row_col_col_source.h  matrix_prod_row_col_row_kernels.h  matrix_prod_row_col_row_source.h  matrix_prod_row_row_col_kernels.h  matrix_prod_row_row_col_source.h  matrix_prod_row_row_row_kernels.h  matrix_prod_row_row_row_source.h  matrix_row_kernels.h  matrix_row_source.h  scalar_kernels.h  scalar_source.h  vector_kernels.h  vector_source.h
tests/: Makefile.am  Tests.make  default.cc  ipp.cc  kiss.cc  libav.cc  ooura.cc  template.inc  testenv.cc  testenv.h
tests/cuda/: Makefile.am  cufft.cc
tests/gpl/: Makefile.am  fftw3.cc
tests/intel/: Makefile.am  mkl.cc
tests/opencl/: Makefile.am  appml.cc  viennacl.cc
